Write the playlist rather than relaying ffmpeg's
ffmpeg numbers segments per process, so every restart — a camera blink, a
network drop — reset EXT-X-MEDIA-SEQUENCE to zero and appended EXT-X-ENDLIST. A
viewer reading that concluded the stream had ended, and on reconnecting saw
sequence numbers it had already consumed. The previous handling was to strip the
ENDLIST back out, which addressed the symptom and left the rewind.

The agent now owns the playlist and takes only the durations from ffmpeg, which
is the one thing ffmpeg genuinely knows better. The sequence increases
monotonically across restarts, the target duration is measured from the segments
actually published rather than declared in advance, and a restart produces an
EXT-X-DISCONTINUITY where the timeline really broke instead of a silent jump.

Verified against the real camera: sequence 9, target duration 7 covering a 6.5s
segment among 3.3s ones, and no ENDLIST.

Also measured the cost curve rather than estimating it. Requests dominate the
bill about three to one over bandwidth, so segment duration is the lever that
matters — but it pays less than proportionally: 2s to 6s saved a third, not two
thirds. Recorded in the README alongside why segments stay fMP4: MPEG-TS adds
3-7% of framing overhead to identical video and hls.js transmuxes it back to
fMP4 in the browser anyway, so it costs more in bandwidth and client CPU while
buying compatibility with players this system does not target.